--- a/src/main/resources/templates/product_info.html
+++ b/src/main/resources/templates/product_info.html
@@ -13,6 +13,7 @@
     <div class="container">
         <h1>Информация о товаре</h1>
         <div th:if="${product != null}">
+            <h5 th:text="${'Категория: ' + product.category.title}"/>
             <h5 th:text="${'ID: ' + product.id}"/>
             <h5 th:text="${'Наименование: ' + product.title}"/>
             <h5 th:text="${'Цена: ' + product.cost}"/>
